hphp/hack/test/typecheck/collection_missing_argl1.php.exp
File "collection_missing_argl1.php", line 5, characters 8-12:
You cannot use this HH\Vector (Typing[4008])
File "collection_missing_argl1.php", line 4, characters 12-17:
It is missing its type parameters
